--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -17,3 +17,8 @@
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
     margin-top: 2px !important;
 }
+
+.form-group.tags {
+    display: grid !important;
+    grid-template-columns: repeat(auto-fill, minmax(269px, 1fr)) !important;
+}
