work on frontend category page part(2) display all category' posts

--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -1074,7 +1074,8 @@ h5,
 }
 
 .entry2 .post-meta .author-figure img {
-    width: 30px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
 }
 
