--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -1,3 +1,8 @@
+img {
+    object-fit: cover;
+    max-width: 100%;
+}
+
 .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
     width: 100% !important;
 }
